tests/res/has/error_scalar.say
say d = { x: 1 };
d has "x"; // error: a bare scalar tests equality; for key presence write `{ k: _ }`, for equality use `==`
